# Ambient

./: .dockerignore  .env  .gitignore  .gitmodules  .rusty-hook.toml  404.html  CHANGELOG.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  Dockerfile  LICENSE.md  README.md  ambient.toml  clippy.toml  flake.nix  index.html  introduction.html  localhost.crt  localhost.key  map.tmd  output.txt  print.html  recipes.json  release.Dockerfile  rust-toolchain.toml  rustfmt.toml  searchindex.js  searchindex.json  slim-release.Dockerfile
app/: Cargo.toml  osx_entitlements.xml  run.sh  tilt.toml
app/crates/core/: Cargo.toml
app/new_project_template/: .gitignore  Cargo.toml
app/new_project_template/src/: lib.rs
app/src/: components.rs  components.toml  ember.rs  examples_renderer.rs  lib.rs  main.rs  new_project.rs  player.rs  server.rs
app/src/cli/: assets.rs  build.rs  client.rs  deploy.rs  ember_path.rs  join.rs  login.rs  mod.rs  new_ember.rs  new_package.rs  new_project.rs  package_path.rs  project_path.rs  server.rs
app/src/client/: mod.rs  player.rs  wasm.rs
app/src/components/: dev.rs  mod.rs
app/src/server/: mod.rs  scripting.rs  wasm.rs
app/src/shared/: certs.rs  components.rs  ember.rs  mod.rs  package.rs  player.rs
asset_timeline/: Cargo.toml
asset_timeline/examples/: asset_timeline.rs
asset_timeline/src/: lib.rs
campfire/: Cargo.toml  README.md  rustfmt.toml
campfire/src/: cli.rs  example.rs  golden_images.rs  install.rs  join.rs  lib.rs  main.rs  package.rs  release.rs  util.rs
campfire/src/doc/: context.rs  helpers.rs  mod.rs  parser.rs  typescript.rs
campfire/src/golden_images/: failure.rs  mod.rs  progress.rs
campfire/src/web/: browser.rs  build.rs  mod.rs  serve.rs
core/: Cargo.toml
core/fpsanim/: ambient.toml
core/fpsanim/assets/: Run Right.fbx  Walk Backward.fbx
core/fpsanim/src/: server.rs
core/fpsaudio/: ambient.toml
core/fpsaudio/src/: client.rs  server.rs
core/fpsmodel/: CREDITS.md  ambient.toml
core/fpsmodel/src/: client.rs  server.rs
core/fpsmovement/: Cargo.toml  ambient.toml
core/fpsmovement/src/: client.rs  server.rs
core/fpsrule/: Cargo.toml  ambient.toml
core/fpsrule/src/: server.rs
core/fpsui/: Cargo.toml  ambient.toml
core/fpsui/src/: client.rs  server.rs
core/src/: camera.rs  hierarchy.rs  transform.rs
core/src/gpu_ecs/: mod.rs
core/tests/: gpu_ecs.rs
crates/animation/: Cargo.toml  README.md
crates/animation/src/: graph.rs  lib.rs  player.rs  resources.rs  retargeting.rs
crates/app/: Cargo.toml  README.md
crates/app/examples/: hello_world.rs
crates/app/src/: app.rs  lib.rs  renderers.rs  window.rs
crates/asset_cache/: Cargo.toml  README.md
crates/asset_cache/src/: background.rs  lib.rs
crates/asset_cache/tests/: basic.rs  keepalive.rs
crates/asset_timeline/: Cargo.toml
crates/asset_timeline/examples/: asset_timeline.rs
crates/asset_timeline/src/: lib.rs
crates/audio/: Cargo.toml  README.md  recipes.json  rustfmt.toml
crates/audio/examples/: basic.rs  basic_await.rs  crossfade.rs  filters.rs  high_pass.rs  pan.rs  random.rs  slices.rs  spatial.rs  wav.rs
crates/audio/src/: assets.rs  barycentric.rs  blt.rs  eq.txt  error.rs  hrtf.rs  lib.rs  mixer.rs  signal.rs  sink.rs  spatial.rs  stream.rs  track.rs  utils.rs  value.rs  vorbis.rs  wav.rs
crates/cameras/: Cargo.toml  README.md
crates/cameras/src/: free.rs  lib.rs  spherical.rs
crates/client_shared/: Cargo.toml
crates/client_shared/src/: game_view.rs  lib.rs  player.rs  util.rs
crates/cloud_client/: Cargo.toml  README.md
crates/cloud_client/src/: lib.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: async_ecs.rs  bounding.rs  camera.rs  hierarchy.rs  lib.rs  manifest.rs  player.rs  timing.rs  transform.rs  window.rs
crates/core/tests/: gpu_ecs.rs
crates/curve/: Cargo.toml
crates/curve/src/: lib.rs
crates/debugger/: Cargo.toml  README.md
crates/debugger/src/: lib.rs
crates/decals/: Cargo.toml  README.md
crates/decals/examples/: decals.rs
crates/decals/src/: decal.wgsl  lib.rs
crates/deploy/: Cargo.toml  README.md  build.rs
crates/deploy/proto/: ambient.run.deploy.rs  deploy.proto
crates/deploy/src/: lib.rs
crates/ecs/: Cargo.toml  README.md  build.rs
crates/ecs/src/: archetype.rs  attributes.rs  component.rs  component2.rs  component_entry.rs  component_registry.rs  component_ser.rs  component_traits.rs  component_unit.rs  concept.rs  entity.rs  entity_data.rs  entity_uid.rs  events.rs  generated.rs  helpers.rs  index.rs  lib.rs  location.rs  message_serde.rs  primitive_component.rs  query.rs  serialization.rs  stream.rs
crates/ecs/tests/: copy_component_recursive.rs  ecs.rs  ecs_change_detection.rs  index.rs  streaming.rs
ecs_editor/: Cargo.toml
ecs_editor/examples/: ecs_editor.rs
ecs_editor/src/: lib.rs
editor_derive/: Cargo.toml
editor_derive/src/: inline_string.rs  lib.rs
element/: Cargo.toml  README.md
element/src/: hooks.rs
element/tests/: events.rs  standard.rs
gizmos/: Cargo.toml
gizmos/examples/: gizmos.rs
gizmos/src/: gizmos.wgsl  lib.rs  traits.rs
instancing/: Cargo.toml  ambient.toml
model_import/: Cargo.toml
model_import/examples/: assimp.rs  fbx.rs  gltf.rs  model_loading.rs  skinmesh.rs
model_import/src/: assimp.rs  lib.rs  model_crate.rs
model_import/src/fbx/: animation.rs  material.rs  mesh.rs  mod.rs  model.rs
physics/: Cargo.toml
physics/examples/: physics.rs
physics/src/: collider.rs  helpers.rs  intersection.rs  lib.rs  mesh.rs  rc_asset.rs
renderer/: Cargo.toml
renderer/examples/: decals.rs  instancing.rs  lod.rs  pbr.rs  renderer_update.rs  shadow_test.rs  texture.rs  translucency.rs
renderer/src/: shadow_renderer.rs
web/: Cargo.toml  README.md  recipes.json
web/.cargo/: config.toml
web/client/: Cargo.toml
web/client-vite/: index.html  package-lock.json  package.json  vite.config.js
web/client-vite/src/: main.ts  (+1 more)
web/dioxus_example/: Cargo.toml
web/src/: lib.rs
web/www/: _headers  app.js  bootstrap.js  index.html  package-lock.json  package.json  processor.js  vite.config.js  webpack.config.js
(+2491 files in other folders)
