[package]
name = "tangent"

edition = "2021"
publish = false
version = "0.0.1"

[dependencies]
# ambient_api = { path = "../Ambient/guest/rust/api" }
ambient_api = { git = "https://github.com/AmbientRun/Ambient.git", rev = "d518fd4a25acb9d65801f0989fe8e487215290d3" }

[[bin]]
name = "client_tangent"
path = "src/client.rs"
required-features = ["client"]

[[bin]]
name = "server_tangent"
path = "src/server.rs"
required-features = ["server"]

[features]
client = ["ambient_api/client"]
server = ["ambient_api/server"]
