[workspace]
default-members = ["app"]
exclude = ["guest", "tmp", "web"]
members = ["crates/*", "libs/*", "shared_crates/*", "app", "campfire"]
resolver = "2"

[workspace.package]
version = "0.3.0-nightly-2023-09-25"
rust-version = "1.70.0"

[workspace.dependencies]
aho-corasick = "1.1.1"
profiling = { version = "1.0.11", features = ["profile-with-puffin"] }
tracing = "0.1.37"
tracing-tree = { version = "0.2" }
tracing-stackdriver = "0.6.2"
tracing-subscriber = { version = "0.3.17", features = [
    "env-filter",
    "time",
    "local-time",
    "parking_lot",
] }
tracing-log = { version = "0.1" }
wgpu = { version = "0.16.3", features = ["serde", "trace", "replay"] }
wgpu-types = { version = "0.16", features = ["serde"] }
winit = { version = "0.28.6", features = ["serde"] }
futures = { version = "0.3", default-features = false, features = ["std"] }
tokio = { version = "1.32", features = ["parking_lot"] }
bytemuck = { version = "1.14", features = ["derive"] }
glam = { version = "0.24", features = ["bytemuck", "serde", "rand"] }
gltf = "1.3.0"
ordered-float = { version = "3.9.1", features = ["serde"] }
derive_more = "0.99.17"
image = "0.24.7"
image_hasher = "1.2.0"
itertools = "0.10.5"
ndarray = { version = "0.15.6", features = ["serde"] }
rand = "0.8.5"
rand_pcg = "0.3.1"
glyph_brush = "0.7.7"
log = "0.4"
dyn-clonable = "0.9.0"
semver = { version = "1.0", features = ["serde"] }
paste = "1.0"
as-any = "0.2.1"
closure = "0.3.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_bytes = "0.11.12"
serde_json = "1.0"
serde_path_to_error = "0.1"
byteorder = "1.4.3"
bincode = "1.3.3"
lazy_static = "1.4.0"
strum = { version = "0.24", features = ["derive"] }
derivative = "2.2.0"
async-trait = "0.1.73"
png = "0.17.10"
puffin = "0.16.0"
puffin_http = "0.13.0"
futures-signals = "0.3"
open = "2.1.3"
which = "4.4.2"
fbxcel = { version = "0.9.0", features = ["tree"] }
reqwest = { version = "0.11.20", default-features = false, features = [
    'blocking',
    'rustls-tls',
    'json',
] }
url = { version = "2", features = ["serde"] }
thiserror = "1.0"
thread-priority = "0.10.0"
once_cell = { version = "1.18.0", features = ["parking_lot"] }
smallvec = "1.11.1"
downcast-rs = "1.2.0"
yaml-rust = { version = "0.5", package = "yaml-rust-davvid" }
maplit = "1.0.2"
chrono = { version = "0.4", default-features = false, features = [
    "serde",
    "clock",
] }
manual_future = "0.1.1"
base64 = "0.13.1"
env_logger = "0.10.0"
async-recursion = "1.0.5"
anyhow = { version = "1.0", features = ["backtrace"] }
bitflags = "1.3"
parking_lot = { version = "0.12.1", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
sentry = { version = "0.31", default-features = false, features = [
    'backtrace',
    'contexts',
    'panic',
    'debug-images',
    'reqwest',
    'rustls',
    'anyhow',
] }
sentry-log = "0.31"
sentry-anyhow = "0.31"
sentry-rust-minidump = "0.6"
enumflags2 = "0.6"
num-traits = "0.2"
num-derive = "0.3"
proc-macro2 = "1.0"
quote = "1.0"
pretty_assertions = "1.4.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
proc-macro-crate = "1.3.1"
bytes = { version = "1.5.0", features = ["serde"] }
dashmap = "5.5.3"
slotmap = "1.0.6"
atomic_refcell = "0.1.11"
flume = { version = "0.11", features = ["async"] }
im = "15.1.0"
axum = "0.6.20"
tower-http = { version = "0.3.5", features = ["cors", "fs"] }
tower = "0.4.13"
indexmap = { version = "2.0", features = ["serde"] }
fixed-vec-deque = "0.1.11"
hex = "0.4.3"
ring = "0.16.20"
data-encoding = "2.4.0"
convert_case = "0.6.0"
fs_extra = "1.3.0"
slugify = "0.1.0"
serde_yaml = "0.9.25"
bit-set = "0.5.3"
bit-vec = "0.6.3"
glob = "0.3.1"
walkdir = "2"
relative-path = { version = "1.9", features = ["serde"] }
pin-project = "1.1"
abort-on-drop = "0.2"
toml = { version = "0.7.8", features = ["preserve_order"] }
percent-encoding = "2.3.0"
indoc = "2.0"
cargo_toml = "0.15.3"
toml_edit = "0.19.15"
arboard = "3.2.1"
noise = { version = "0.7.0", default-features = false }
russimp = { version = "1.0.6", features = ['prebuilt'] }
symphonia = { version = "0.5", default-features = false, features = [
    "mp3",
    "pcm",
    "wav",
] }
vorbis_rs = "0.3.0"
colored = "2.0.4"
directories = "5.0.1"
ulid = { version = "1.1.0", features = ["serde"] }
enum_dispatch = "0.3"
uuid = "1.4"
scopeguard = "1.2"
prost = "0.11"
tokio-stream = "0.1"
tonic = { version = "0.9", features = ["gzip", "tls", "tls-roots"] }
md-5 = "0.10"
pollster = "0.3.0"
rpassword = "7.2"
sha2 = "0.10"

cfg-if = "1.0"

# Web Client
web-sys = { version = "0.3.64", features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlDocument",
    "Performance",
    "Window",
] }
js-sys = { version = "0.3.64" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

#
# Networking
#
time = { version = "0.3" }
quinn = { version = "0.10" }
rustls-native-certs = "0.6.3"
webpki-roots = "0.23.1"
mikktspace = { git = "https://github.com/gltf-rs/mikktspace" }
rustls = { version = "0.21.7", features = ["dangerous_configuration", "quic"] }

rustls-pemfile = "1.0"

# See: https://github.com/hyperium/h3/pull/183
h3 = { git = "https://github.com/hyperium/h3" }
h3-webtransport = { git = "https://github.com/hyperium/h3" }
h3-quinn = { git = "https://github.com/hyperium/h3" }
http = { version = "0.2.9" }

#
# WASM
#
wasi-cap-std-sync = { version = "14.0.0", git = "https://github.com/bytecodealliance/wasmtime", rev = "9f00198611537c7a9b384c9f9e3db85e0ca15123" }

wit-bindgen-core = "0.9.0"
wit-bindgen-rust = "0.9.0"
wit-component = "0.11.0"

[profile.release]
incremental = true
