[package]
edition = "2021"
name = "ambient"
version = { workspace = true }
rust-version = { workspace = true }
repository = "https://github.com/AmbientRun/Ambient"

[dependencies]
ambient_sys = { path = "../crates/sys" , version = "0.3.2-nightly-2023-11-28" }
ambient_animation = { path = "../crates/animation" , version = "0.3.2-nightly-2023-11-28" }
ambient_app = { path = "../crates/app" , version = "0.3.2-nightly-2023-11-28" }
ambient_audio = { path = "../crates/audio" , version = "0.3.2-nightly-2023-11-28" }
ambient_build = { path = "../crates/build" , version = "0.3.2-nightly-2023-11-28" }
ambient_cameras = { path = "../crates/cameras" , version = "0.3.2-nightly-2023-11-28" }
ambient_cloud_client = { path = "../crates/cloud_client" , version = "0.3.2-nightly-2023-11-28" }
ambient_core = { path = "../crates/core" , version = "0.3.2-nightly-2023-11-28" }
ambient_debugger = { path = "../crates/debugger" , version = "0.3.2-nightly-2023-11-28" }
ambient_decals = { path = "../crates/decals" , version = "0.3.2-nightly-2023-11-28" }
ambient_deploy = { path = "../crates/deploy" , version = "0.3.2-nightly-2023-11-28" }
ambient_ecs = { path = "../crates/ecs" , version = "0.3.2-nightly-2023-11-28" }
ambient_git_rev_init = { path = "../crates/git_rev_init" , version = "0.3.2-nightly-2023-11-28" }
ambient_gizmos = { path = "../crates/gizmos" , version = "0.3.2-nightly-2023-11-28" }
ambient_model_import = { path = "../crates/model_import" , version = "0.3.2-nightly-2023-11-28" }
ambient_network = { path = "../crates/network" , version = "0.3.2-nightly-2023-11-28" }
ambient_prefab = { path = "../crates/prefab" , version = "0.3.2-nightly-2023-11-28" }
ambient_physics = { path = "../crates/physics" , version = "0.3.2-nightly-2023-11-28" }
ambient_primitives = { path = "../crates/primitives" , version = "0.3.2-nightly-2023-11-28" }
ambient_rpc = { path = "../crates/rpc" , version = "0.3.2-nightly-2023-11-28" }
ambient_native_std = { path = "../crates/native_std" , version = "0.3.2-nightly-2023-11-28" }
ambient_ui_native = { path = "../crates/ui_native" , version = "0.3.2-nightly-2023-11-28" }
ambient_world_audio = { path = "../crates/world_audio" , version = "0.3.2-nightly-2023-11-28" }
ambient_sky = { path = "../crates/sky" , version = "0.3.2-nightly-2023-11-28" }
ambient_water = { path = "../crates/water" , version = "0.3.2-nightly-2023-11-28" }
ambient_client_shared = { path = "../crates/client_shared/" , version = "0.3.2-nightly-2023-11-28" }
ambient_package_semantic_native = { path = "../crates/package_semantic_native" , version = "0.3.2-nightly-2023-11-28" }
ambient_settings = { path = "../crates/settings" , version = "0.3.2-nightly-2023-11-28" }

ambient_element = { path = "../shared_crates/element" , version = "0.3.2-nightly-2023-11-28" }
ambient_package = { path = "../shared_crates/package" , version = "0.3.2-nightly-2023-11-28" }
ambient_package_semantic = { path = "../shared_crates/package_semantic" , version = "0.3.2-nightly-2023-11-28" }
ambient_std = { path = "../shared_crates/std" , version = "0.3.2-nightly-2023-11-28" }
ambient_shared_types = { path = "../shared_crates/shared_types", features = [
    "native",
] , version = "0.3.2-nightly-2023-11-28" }

tracing-tree = { workspace = true, optional = true }
tracing-stackdriver = { workspace = true, optional = true }
tracing-subscriber = { workspace = true }
time = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
convert_case = { workspace = true }
env_logger = { workspace = true }
glam = { workspace = true }
parking_lot = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
image = { workspace = true }
tracing = { workspace = true }
image_hasher = { workspace = true }
toml_edit = { workspace = true }
rpassword = { workspace = true }
sentry = { workspace = true }
sentry-rust-minidump = { workspace = true }
colored = { workspace = true }
pathdiff = { workspace = true }
open = { workspace = true }

[dev-dependencies]
glam = { workspace = true }
rusty-hook = "^0.11.2"

[features]
no_bundled_certs = []
default = ["tls-webpki-roots"]
production = ["assimp", "stackdriver"]
profile = ["ambient_app/profile"]
assimp = ["ambient_model_import/russimp"]
stackdriver = ["tracing-stackdriver"]
tls-native-roots = ["ambient_network/tls-native-roots"]
tls-webpki-roots = ["ambient_network/tls-webpki-roots"]
hotload-includes = [
    "ambient_app/hotload-includes",
    "ambient_decals/hotload-includes",
]
debug-local-datagram-latency = ["ambient_wasm/debug-local-datagram-latency"]

[target.'cfg(not(target_os = "unknown"))'.dependencies]
axum = { workspace = true }
axum-server = { workspace = true }
rustls = { workspace = true }
ambient_wasm = { path = "../crates/wasm" , version = "0.3.2-nightly-2023-11-28" }
