[package]
name = "elements_asset_timeline"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elements = { path = ".." }
elements_ecs = { path = "../ecs" }
elements_std = { path = "../std" }
elements_ui = { path = "../ui" }
elements_core = { path = "../core" }
elements_element = { path = "../element" }
elements_renderer = { path = "../renderer" }
env_logger.workspace = true
itertools.workspace = true
chrono.workspace = true
glam.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
tracing-subscriber = "0.3"
async-trait.workspace = true
