[package]
name = "campfire"
version = { workspace = true }
edition = "2021"
publish = false

[dependencies]
anyhow = { version = "1.0", features = [] }
clap = { workspace = true, features = ["derive"] }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml_edit = { workspace = true }
itertools = { workspace = true }
toml = { workspace = true }

which = "4.4"
rustdoc-json = "0.8.0"
rustdoc-types = "0.20.0"
simplelog = "0.12.1"
cargo_toml = "0.15"
guppy = "0.15"
indicatif = "0.17.3"
tokio = { version = "1.0", features = ["fs", "macros", "rt", "process", "time"] }
futures = "0.3"
num_cpus = "1.15.0"
home = "0.5"
notify = { version = "6.0", optional = true }
flume = { version = "0.11", optional = true }
walkdir = { version = "2.3.2", optional = true }
notify-debouncer-full = { version = "0.2", optional = true, default-features = false }

[target.'cfg(target_os="windows")'.dependencies]
openssl = { version = "0.10", features = ["vendored"], optional = true }
dunce = "1.0"

[target.'cfg(target_os="linux")'.dependencies]
nix = "0.26"

[target.'cfg(not(target_os="windows"))'.dependencies]
openssl = { version = "0.10", optional = true }

[features]
default = ["serve"]
serve = ["dep:notify", "dep:flume", "walkdir", "notify-debouncer-full"]
