[package]
name = "campfire"
version = { workspace = true }
edition = "2021"
publish = false

[dependencies]
anyhow = { version = "1.0", features = [] }
clap = { workspace = true, features = ["derive"] }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml_edit = { workspace = true }
itertools = { workspace = true }
toml = { workspace = true }
sha2 = { workspace = true }
data-encoding = { workspace = true }

which = "4.4"
rustdoc-json = "0.8.7"
rustdoc-types = "0.20.0"
simplelog = "0.12.1"
cargo_toml = "0.15"
guppy = "0.15"
indicatif = "0.17.6"
tokio = { version = "1.32", features = ["fs", "rt", "process", "time"] }
futures = "0.3"
num_cpus = "1.16.0"
home = "0.5"
x509-certificate = "0.21.0"
spki = "0.7"

notify = { version = "6.1", optional = true }
flume = { version = "0.11", optional = true }

[target.'cfg(target_os="windows")'.dependencies]
dunce = "1.0"

[target.'cfg(target_os="linux")'.dependencies]
nix = "0.26"

[features]
default = ["serve"]
serve = ["dep:notify", "dep:flume"]
