[package]
name = "campfire"
version = { workspace = true }
edition = "2021"
publish = false

[dependencies]
anyhow = { version = "1.0", features = [] }
clap = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml_edit = { workspace = true }
itertools = { workspace = true }
toml = { workspace = true }
sha2 = { workspace = true }
data-encoding = { workspace = true }

notify = { version = "6.1", optional = true }
flume = { version = "0.11", optional = true }

which = "4.4"
rustdoc-json = "0.8.7"
rustdoc-types = "0.20.0"
cargo_toml = "0.15"
guppy = "0.15"
indicatif = "0.17.6"
tokio = { version = "1.32", features = ["fs", "rt", "process", "time"] }
futures = "0.3"
num_cpus = "1.16.0"
home = "0.5"
x509-certificate = "0.21.0"
spki = "0.7"
crates_io_api = "0.8.1"
semver = "1.0"

# Hope this won't cause any issues!
ambient_shared_types = { path = "../shared_crates/shared_types" }

[target.'cfg(target_os="windows")'.dependencies]
dunce = "1.0"

[target.'cfg(target_os="linux")'.dependencies]
nix = "0.26"

[features]
default = ["serve"]
serve = ["dep:notify", "dep:flume"]
