[package]
name = "elements_core"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elements_ecs = { path = "../ecs" }
elements_std = { path = "../std" }
elements_gpu = { path = "../gpu" }
itertools.workspace = true
yaml-rust.workspace = true
log.workspace = true
glam.workspace = true
wgpu.workspace = true
profiling.workspace = true
derive_more.workspace = true
bytemuck.workspace = true
lazy_static.workspace = true
paste.workspace = true
winit.workspace = true
ordered-float.workspace = true
tokio.workspace = true
parking_lot.workspace = true
flume.workspace = true

[dev-dependencies]
maplit.workspace = true
