
[package]
name = "elements_editor_derive"
version.workspace = true
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
pretty_assertions.workspace = true
itertools.workspace = true
syn.workspace = true
proc-macro-crate.workspace = true

[dev-dependencies]
elements_ui = { path = "../ui" }
pretty_assertions = "1.3"
