[package]
name = "elements_gizmos"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elements_std = { path = "../std" }
elements_ecs = { path = "../ecs" }
elements_gpu = { path = "../gpu" }
elements_core = { path = "../core" }
elements_meshes = { path = "../meshes" }
elements_renderer = { path = "../renderer" }
dashmap.workspace = true
glam.workspace = true
bytemuck.workspace = true
wgpu.workspace = true
log.workspace = true
serde.workspace = true
once_cell = "1.13.0"
profiling.workspace = true

[dev-dependencies]
elements = { path = ".." }

[features]
bundle-includes = ['elements_std/bundle-includes']
