[package]
name = "instancing"

edition = "2021"
publish = false
version = "0.0.1"

[dependencies]
ambient_api = { git = "https://github.com/AmbientRun/Ambient.git", rev = "0bfba4ce" }

[[bin]]
name = "client_instancing"
path = "src/client.rs"
required-features = ["client"]

[[bin]]
name = "server_instancing"
path = "src/server.rs"
required-features = ["server"]

[features]
client = ["ambient_api/client"]
server = ["ambient_api/server"]