[package]
name = "elements_model_import"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elements = { path = ".." }
elements_std = { path = "../std" }
elements_core = { path = "../core" }
elements_ecs = { path = "../ecs" }
elements_renderer = { path = "../renderer" }
elements_element = { path = "../element" }
elements_ui = { path = "../ui" }
elements_physics = { path = "../physics" }
physxx = { path = "../../physxx" }
glam.workspace = true
env_logger.workspace = true
gltf.workspace = true
image.workspace = true
base64.workspace = true
async-trait.workspace = true
bincode.workspace = true
bytemuck.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
itertools.workspace = true
reqwest.workspace = true
futures.workspace = true
async-recursion.workspace = true
fbxcel.workspace = true
ordered-float.workspace = true
indexmap.workspace = true
log.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
russimp = { git = "https://github.com/FredrikNoren/russimp.git", features = [
    'static-link',
] }
[target.'cfg(not(target_os = "linux"))'.dependencies]
russimp = { git = "https://github.com/FredrikNoren/russimp.git", features = [
    'prebuilt',
] }

[dev-dependencies]
elements_element = { path = "../element" }
elements_gizmos = { path = "../gizmos" }
winit.workspace = true
