
[package]
name = "elements_physics"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elements = { path = ".." }
elements_ecs = { path = "../ecs" }
elements_element = { path = "../element" }
elements_ui = { path = "../ui" }
elements_std = { path = "../std" }
elements_editor_derive = { path = "../editor_derive" }
elements_core = { path = "../core" }
elements_meshes = { path = "../meshes" }
elements_network = { path = "../network" }
elements_gizmos = { path = "../gizmos" }
physxx = { path = "../../physxx" }
serde.workspace = true
serde_json.workspace = true
glam.workspace = true
itertools.workspace = true
futures.workspace = true
rand.workspace = true
async-trait.workspace = true
parking_lot.workspace = true
tracing.workspace = true
anyhow.workspace = true
profiling.workspace = true
ordered-float.workspace = true
once_cell.workspace = true
tokio.workspace = true

[dev-dependencies]
elements_renderer = { path = "../renderer" }
